--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,25 @@ name: CI/CD for LEMP Containers
 on:
   push:
     branches: [ main ]
-    tags:     [ 'v*' ]  # optional: run on version tags, e.g., v1.0.0 #- name: Run backend tests
-                              #  run: python backend/test_app.py
+    tags: [ 'v*' ]  # optional: run on version tags, e.g., v1.0.0
 
 jobs:
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Run simple test
+        run: |
+          echo "Running simple CI test"
+          # yksinkertainen sanity-check: README.md pitää löytyä
+          test -f README.md
+
   build-and-push:
     runs-on: ubuntu-latest
+    needs: test
     permissions:
       contents: read
       packages: write
@@ -23,8 +36,6 @@ jobs:
 
       - name: Install backend dependencies
         run: pip install -r backend/requirements.txt
-
-      
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -59,77 +70,70 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/lemp-frontend:latest
           cache-to: type=inline
 
-  
   copy-init-sql:
-      runs-on: ubuntu-latest
-      needs: build-and-push
-      steps:
-        - name: Checkout repository
-          uses: actions/checkout@v4
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-        - name: Ensure target directory exists on VM
-          uses: appleboy/ssh-action@v1.0.3
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            script: |
-              cd /
-              sudo mkdir -p /opt/lemp/db/init/
+      - name: Ensure target directory exists on VM
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          script: |
+            cd /
+            sudo mkdir -p /opt/lemp/db/init/
 
-        - name: Set permissions for /opt/lemp/db/init/
-          uses: appleboy/ssh-action@v1.0.3
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            script: |
-              sudo chown -R $(whoami) /opt/lemp/db/init/
-              sudo chmod -R u+w /opt/lemp/db/init/
+      - name: Set permissions for /opt/lemp/db/init/
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          script: |
+            sudo chown -R $(whoami) /opt/lemp/db/init/
+            sudo chmod -R u+w /opt/lemp/db/init/
 
-        - name: Copy init.sql to VM
-          uses: appleboy/scp-action@v0.1.4
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            source: db/init/init.sql
-            target: /opt/lemp/db/init/
-            strip_components: 2
+      - name: Copy init.sql to VM
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          source: db/init/init.sql
+          target: /opt/lemp/db/init/
+          strip_components: 2
 
-        
+      - name: Copy docker-compose.prod.yml to VM
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          source: docker-compose.prod.yml
+          target: /tmp/
 
-        - name: Copy docker-compose.prod.yml to VM
-          uses: appleboy/scp-action@v0.1.4
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            source: docker-compose.prod.yml
-            target: /tmp/
-
-        - name: Move docker-compose.prod.yml to /opt/lemp/ on VM
-          uses: appleboy/ssh-action@v1.0.3
-          with:
-            host: ${{ secrets.SSH_HOST }}
-            username: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            port: 22
-            script: |
-              sudo cp /tmp/docker-compose.prod.yml /opt/lemp/docker-compose.yml
-            
+      - name: Move docker-compose.prod.yml to /opt/lemp/ on VM
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: 22
+          script: |
+            sudo cp /tmp/docker-compose.prod.yml /opt/lemp/docker-compose.yml
 
   deploy:
     runs-on: ubuntu-latest
     needs: copy-init-sql
     steps:
-    
-  
-
       - name: Deploy to VM via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -140,13 +144,13 @@ jobs:
           script: |
             set -e
             cd /opt/lemp
-            
+
             if [ ! -d "/var/lib/docker/volumes/lemp_db_data" ]; then
               docker-compose down -v
             else
               docker-compose down
             fi
- 
+
             docker-compose pull
             docker-compose up -d
             docker-compose ps
